[tool.poetry]
name = "decorators"
version = "0.1.0"
description = ""
authors = ["Kyle Adams <kadams54@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
decorator = "^5.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
